# bad-apple-voxel-raytracer

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  open-solution.bat  run-raytracing-demo.bat
Source/Applications/: CMakeLists.txt
Source/Applications/Demo/: CMakeLists.txt
Source/Applications/Demo/include/: app.h  audio_player.h  bad_apple_player.h  collision_detection.h  physics_manager.h  scene_builder.h  spline.h  spline_editor.h
Source/Applications/Demo/src/: app.cpp  entry_point.cpp  physics_manager.cpp
Source/Applications/Playground/lighting/: CMakeLists.txt
Source/Applications/Playground/lighting/include/: lighting.h
Source/Applications/Playground/lighting/src/: lighting.cpp  main.cpp
Source/Applications/Playground/primitives/: CMakeLists.txt
Source/Applications/Playground/primitives/include/: primitives_renderer.h
Source/Applications/Playground/primitives/src/: main.cpp  primitives_renderer.cpp
Source/Applications/Playground/projection/: CMakeLists.txt
Source/Applications/Playground/projection/include/: projection_renderer.h
Source/Applications/Playground/projection/src/: main.cpp  projection_renderer.cpp
Source/Applications/Playground/reflections/: CMakeLists.txt
Source/Applications/Playground/reflections/include/: reflections_renderer.h  room_loader.h
Source/Applications/Playground/reflections/src/: main.cpp  reflections_renderer.cpp  room_loader.cpp
Source/Applications/Playground/stochastic/: CMakeLists.txt
Source/Applications/Playground/stochastic/include/: stochastic_renderer.h
Source/Applications/Playground/stochastic/src/: main.cpp  stochastic_renderer.cpp
Source/Engine/: CMakeLists.txt
Source/Engine/Private/core/: camera.cpp  ray.cpp  renderer.cpp  sky_dome.cpp
Source/Engine/Private/management/: light_editor.cpp  light_manager.cpp  renderer_panel.cpp  ui_manager.cpp  viewport_panel.cpp
Source/Engine/Private/rendering/: analytic_scene.cpp  material_editor.cpp  material_manager.cpp  shading.cpp
Source/Engine/Private/scene/: brick_pool.cpp  brick_traverser.cpp  brick_traverser.h  cube_helpers.h  dda.h  scene.cpp  scene_loader.cpp
Source/Engine/Public/rt/brdf/: brdf.h  brdf_aniso.h  brdf_diffuse.h  brdf_evaluate.h  brdf_fresnel.h  brdf_geometry.h  brdf_ndf.h  brdf_types.h  bsdf.h  bsdf_types.h
Source/Engine/Public/rt/core/: blue_noise.h  camera.h  ray.h  renderer.h  sky_dome.h
Source/Engine/Public/rt/lights/: directional_light.h  light_sample.h  point_light.h  spotlight.h
Source/Engine/Public/rt/management/: light_editor.h  light_manager.h  renderer_panel.h  ui_manager.h  viewport_panel.h
Source/Engine/Public/rt/rendering/: bit_packer.h  config.h  material.h  material_editor.h  material_manager.h  mesh.h  shading.h  simd_utils.h
Source/Engine/Public/rt/rendering/primitives/: analytic_scene.h  hit_info.h  sphere.h  voxel_instance.h
Source/Engine/Public/rt/scene/: brick_map.h  brick_pool.h  scene.h  scene_loader.h
Source/Tests/: CMakeLists.txt  test_algorithm.cpp
assets/: imgui.ini
assets/textures/: CREDITS  jacco.hdr  mysterious.hdr
cmake/: copy_assets.cmake  create_app.cmake
tools/: _common.bat  run-raytracing-demo.bat
